Passing token in the payload to get access token
