# gen/http/openapi.yaml
@@ -147,6 +147,12 @@ paths:
       summary: oauth blog
       description: Github authentication to post a new blog
       operationId: blog#oauth
+      parameters:
+      - name: OauthRequestBody
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/BlogOauthRequestBody'
       responses:
         "201":
           description: Created response.
@@ -176,8 +182,8 @@ definitions:
         $ref: '#/definitions/CommentsRequestBody'
     example:
       comments:
-        comments: Aliquid provident.
-        id: 3075859993
+        comments: Vel nam dolores et minus.
+        id: 339538165
   BlogAddResponseBody:
     title: BlogAddResponseBody
     type: object
@@ -187,13 +193,13 @@ definitions:
       id:
         type: integer
         description: Id of blog
-        example: 1204016809
+        example: 3125156104
         format: int32
     example:
       comments:
-        comments: Vel nam dolores et minus.
-        id: 339538165
-      id: 2219396815
+        comments: Dolorum fuga.
+        id: 1591530152
+      id: 4136160167
   BlogCreateRequestBody:
     title: BlogCreateRequestBody
     type: object
@@ -204,33 +210,33 @@ definitions:
           $ref: '#/definitions/CommentsRequestBody'
         description: Comments
         example:
-        - comments: Aliquid provident.
-          id: 3075859993
-        - comments: Aliquid provident.
-          id: 3075859993
-        - comments: Aliquid provident.
-          id: 3075859993
+        - comments: Vel nam dolores et minus.
+          id: 339538165
+        - comments: Vel nam dolores et minus.
+          id: 339538165
+        - comments: Vel nam dolores et minus.
+          id: 339538165
         maxItems: 100
       id:
         type: integer
         description: ID of a person
-        example: 3738307162
+        example: 4017985820
         format: int32
       name:
         type: string
         description: Name of person
-        example: lsc
+        example: s09
         maxLength: 100
     example:
       comments:
-      - comments: Aliquid provident.
-        id: 3075859993
-      - comments: Aliquid provident.
-        id: 3075859993
-      - comments: Aliquid provident.
-        id: 3075859993
-      id: 1227376400
-      name: hk5
+      - comments: Vel nam dolores et minus.
+        id: 339538165
+      - comments: Vel nam dolores et minus.
+        id: 339538165
+      - comments: Vel nam dolores et minus.
+        id: 339538165
+      id: 998969093
+      name: obn
   BlogCreateResponseBody:
     title: BlogCreateResponseBody
     type: object
@@ -241,33 +247,43 @@ definitions:
           $ref: '#/definitions/CommentsResponseBody'
         description: Comments
         example:
-        - comments: Vel nam dolores et minus.
-          id: 339538165
-        - comments: Vel nam dolores et minus.
-          id: 339538165
-        - comments: Vel nam dolores et minus.
-          id: 339538165
+        - comments: Dolorum fuga.
+          id: 1591530152
+        - comments: Dolorum fuga.
+          id: 1591530152
+        - comments: Dolorum fuga.
+          id: 1591530152
         maxItems: 100
       id:
         type: integer
         description: ID of a person
-        example: 3056043812
+        example: 3050217864
         format: int32
       name:
         type: string
         description: Name of person
-        example: ggb
+        example: b8v
         maxLength: 100
     example:
       comments:
-      - comments: Vel nam dolores et minus.
-        id: 339538165
-      - comments: Vel nam dolores et minus.
-        id: 339538165
-      - comments: Vel nam dolores et minus.
-        id: 339538165
-      id: 3398823215
-      name: 4fz
+      - comments: Dolorum fuga.
+        id: 1591530152
+      - comments: Dolorum fuga.
+        id: 1591530152
+      - comments: Dolorum fuga.
+        id: 1591530152
+      id: 2868590302
+      name: xdl
+  BlogOauthRequestBody:
+    title: BlogOauthRequestBody
+    type: object
+    properties:
+      token:
+        type: string
+        description: Access github token
+        example: Sed autem vel saepe voluptas necessitatibus.
+    example:
+      token: Nam minus nesciunt odit eveniet sed est.
   BlogShowRequestBody:
     title: BlogShowRequestBody
     type: object
@@ -278,27 +294,27 @@ definitions:
           $ref: '#/definitions/CommentsRequestBody'
         description: Comments
         example:
-        - comments: Aliquid provident.
-          id: 3075859993
-        - comments: Aliquid provident.
-          id: 3075859993
-        - comments: Aliquid provident.
-          id: 3075859993
+        - comments: Vel nam dolores et minus.
+          id: 339538165
+        - comments: Vel nam dolores et minus.
+          id: 339538165
+        - comments: Vel nam dolores et minus.
+          id: 339538165
         maxItems: 100
       name:
         type: string
         description: Name of person
-        example: 2uo
+        example: eo9
         maxLength: 100
     example:
       comments:
-      - comments: Aliquid provident.
-        id: 3075859993
-      - comments: Aliquid provident.
-        id: 3075859993
-      - comments: Aliquid provident.
-        id: 3075859993
-      name: wae
+      - comments: Vel nam dolores et minus.
+        id: 339538165
+      - comments: Vel nam dolores et minus.
+        id: 339538165
+      - comments: Vel nam dolores et minus.
+        id: 339538165
+      name: iis
   BlogShowResponseBody:
     title: BlogShowResponseBody
     type: object
@@ -309,33 +325,33 @@ definitions:
           $ref: '#/definitions/CommentsResponseBody'
         description: Comments
         example:
-        - comments: Vel nam dolores et minus.
-          id: 339538165
-        - comments: Vel nam dolores et minus.
-          id: 339538165
-        - comments: Vel nam dolores et minus.
-          id: 339538165
+        - comments: Dolorum fuga.
+          id: 1591530152
+        - comments: Dolorum fuga.
+          id: 1591530152
+        - comments: Dolorum fuga.
+          id: 1591530152
         maxItems: 100
       id:
         type: integer
         description: ID of a person
-        example: 1157799891
+        example: 955661082
         format: int32
       name:
         type: string
         description: Name of person
-        example: 6at
+        example: mpt
         maxLength: 100
     example:
       comments:
-      - comments: Vel nam dolores et minus.
-        id: 339538165
-      - comments: Vel nam dolores et minus.
-        id: 339538165
-      - comments: Vel nam dolores et minus.
-        id: 339538165
-      id: 4136160167
-      name: smp
+      - comments: Dolorum fuga.
+        id: 1591530152
+      - comments: Dolorum fuga.
+        id: 1591530152
+      - comments: Dolorum fuga.
+        id: 1591530152
+      id: 3426442364
+      name: o6j
   BlogUpdateRequestBody:
     title: BlogUpdateRequestBody
     type: object
@@ -346,29 +362,29 @@ definitions:
           $ref: '#/definitions/CommentsRequestBody'
         description: Comments to be updated
         example:
-        - comments: Aliquid provident.
-          id: 3075859993
-        - comments: Aliquid provident.
-          id: 3075859993
-        - comments: Aliquid provident.
-          id: 3075859993
-        - comments: Aliquid provident.
-          id: 3075859993
+        - comments: Vel nam dolores et minus.
+          id: 339538165
+        - comments: Vel nam dolores et minus.
+          id: 339538165
+        - comments: Vel nam dolores et minus.
+          id: 339538165
+        - comments: Vel nam dolores et minus.
+          id: 339538165
       name:
         type: string
         description: Details of blog to be updated
-        example: Quis saepe.
+        example: Molestiae et iusto.
     example:
       comments:
-      - comments: Aliquid provident.
-        id: 3075859993
-      - comments: Aliquid provident.
-        id: 3075859993
-      - comments: Aliquid provident.
-        id: 3075859993
-      - comments: Aliquid provident.
-        id: 3075859993
-      name: Autem inventore rerum molestiae.
+      - comments: Vel nam dolores et minus.
+        id: 339538165
+      - comments: Vel nam dolores et minus.
+        id: 339538165
+      - comments: Vel nam dolores et minus.
+        id: 339538165
+      - comments: Vel nam dolores et minus.
+        id: 339538165
+      name: Temporibus quam quis.
     required:
     - name
     - comments
@@ -379,16 +395,16 @@ definitions:
       comments:
         type: string
         description: Comment for the blog
-        example: Totam molestiae dolorum omnis impedit.
+        example: Beatae soluta voluptatibus aut tempore.
       id:
         type: integer
         description: ID of a comment
-        example: 896432596
+        example: 4010003907
         format: int32
     description: Id and comments
     example:
-      comments: Soluta consequatur beatae soluta voluptatibus aut.
-      id: 3327564444
+      comments: Sequi perferendis dolores temporibus labore.
+      id: 1227376400
   CommentsResponse:
     title: CommentsResponse
     type: object
@@ -396,16 +412,16 @@ definitions:
       comments:
         type: string
         description: Comment for the blog
-        example: Voluptatibus enim architecto consequatur id.
+        example: Et et nobis est omnis consequatur rerum.
       id:
         type: integer
         description: ID of a comment
-        example: 1805329664
+        example: 2753009699
         format: int32
     description: Id and comments
     example:
-      comments: Quis et et nobis est omnis consequatur.
-      id: 4002546866
+      comments: Id aut assumenda et.
+      id: 3343860529
   CommentsResponseBody:
     title: CommentsResponseBody
     type: object
@@ -413,16 +429,16 @@ definitions:
       comments:
         type: string
         description: Comment for the blog
-        example: Quo est placeat rem.
+        example: Et tenetur numquam iste et eos.
       id:
         type: integer
         description: ID of a comment
-        example: 3390383988
+        example: 3407509870
         format: int32
     description: Id and comments
     example:
-      comments: A et ullam nihil et.
-      id: 91051573
+      comments: Necessitatibus id.
+      id: 3480606670
   StoredblogResponse:
     title: 'Mediatype identifier: application/vnd.cellar.stored-blog; view=default'
     type: object
@@ -433,35 +449,35 @@ definitions:
           $ref: '#/definitions/CommentsResponse'
         description: Comments
         example:
-        - comments: Cum omnis eligendi quam eveniet.
-          id: 681634963
-        - comments: Cum omnis eligendi quam eveniet.
-          id: 681634963
-        - comments: Cum omnis eligendi quam eveniet.
-          id: 681634963
+        - comments: Eveniet non eaque omnis et inventore ea.
+          id: 1647799179
+        - comments: Eveniet non eaque omnis et inventore ea.
+          id: 1647799179
+        - comments: Eveniet non eaque omnis et inventore ea.
+          id: 1647799179
         maxItems: 100
       id:
         type: integer
         description: ID is the unique id of the blog.
-        example: 2622238540
+        example: 2926168972
         format: int32
       name:
         type: string
         description: Name of person
-        example: a8o
+        example: 3wh
         maxLength: 100
     description: A Storedblog describes a blog retrieved by the storage service. (default
       view)
     example:
       comments:
-      - comments: Cum omnis eligendi quam eveniet.
-        id: 681634963
-      - comments: Cum omnis eligendi quam eveniet.
-        id: 681634963
-      - comments: Cum omnis eligendi quam eveniet.
-        id: 681634963
-      id: 3343860529
-      name: d0e
+      - comments: Eveniet non eaque omnis et inventore ea.
+        id: 1647799179
+      - comments: Eveniet non eaque omnis et inventore ea.
+        id: 1647799179
+      - comments: Eveniet non eaque omnis et inventore ea.
+        id: 1647799179
+      id: 1930843253
+      name: 51m
     required:
     - id
     - name
